2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (char-after): Byte-optimize it for old Emacsen.
	(char-before): Ditto.

2002-08-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-resume): Confirm `value' for text form
	is a string.

2002-08-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (ffap-url-regexp): Fix last change.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (ffap-url-regexp): Modify the value to make it match to
	nntp urls.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (very-slow): New rule.

	* attic/addpath.el: New file.

2002-08-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e21.el: Require `cl' when compiling to provide the function
	`gensym'.  It is needed to byte-compile this file alone because of
	the w3m-proc macros.
	* w3m-image.el: Ditto.
	* w3m-bitmap.el: Don't bother to load cl-macs.

2002-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-display-message-enable-logging): New variable.
	(w3m-display-message): Use it.

2002-08-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-scan): Support Mew 3.0.64
	or later.

2002-08-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el (shimbun-retrieve-url): Disable reflesh
	feature.  Move point to top of buffer.

2002-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-top-level-domain): New
	variable.
	(shimbun-asahi-url): Use it.
	(shimbun-asahi-from-address): Use it.
	(shimbun-asahi-get-headers-in-the-list-page): Enhance the
	uniqueness of Message-IDs.
	(shimbun-asahi-get-headers-in-the-top-page): Ditto.

2002-08-08  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-w3m-retrieve-1): Do not make error but return nil,
	even if decoding is failed.

2002-08-08  Nishimoto Masaki  <nishimoto@gaju.org>

	* w3m-proc.el (w3m-process-with-environment): Copy
	`process-environment' before `getenv' is called, in order to avoid