@@ -1,5 +1,15 @@
 2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m.el (w3m-delete-other-buffers): New user command.
+	(w3m-lynx-like-map): Bind the key `C-c w' to the command
+	`w3m-delete-other-buffers'.
+	(w3m-info-like-map): Ditto.
+	(w3m-select-buffer-mode-map): Bind the key to the command
+	`w3m-select-buffer-delete-other-buffers'.
+	(w3m-select-buffer-delete-other-buffers): New user command.
+
+2002-08-27  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* w3mhack.el (char-after): Byte-optimize it for old Emacsen.
 	(char-before): Ditto.
 
